installed multer and set up the structure for managing file upload to the application using the file system

--- a/views/book-registration.pug
+++ b/views/book-registration.pug
@@ -9,11 +9,11 @@ block contents
             h4 "Books are our stories in a world where everything is forgoten"
             p Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quam nulla cumque hic, dignissimos veniam eos repudiandae temporibus, corrupti, et saepe fuga magni placeat quod nobis velit dicta eaque asperiores?
         
-        form(action="/books/register" method="POST")
+        form(action="/books/register" method="POST" enctype="multipart/form-data")
             input(type="hidden" name="_csrf" value=(csrfToken))
             input(type="text" placeholder="Book title" name="title")
             input(type="text" placeholder="Author name" name="author")
-            input(type="url" placeholder="Valid Book Image URL" name="image")
+            input(type="file" placeholder="Upload a book" name="image")
             .publication-details
                 input(type="date" placeholder="Publication date" name="pub")
                 input(type="text" placeholder="ISBN Number" name="isbn")
