--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,7 +4,7 @@ a, h3, h4, h5, p {
 }
 
 .view-area{
-    padding: 0px 150px;
+    padding: 0px 100px;
 }
 
 .view-area .library-view {
@@ -14,7 +14,6 @@ a, h3, h4, h5, p {
 .library-view h3{
     color: rgba(142, 142, 142, 0.8);
     font-size: 16px;
-    margin-left: 20px;
 }
 
 .view-area .search-bar{
@@ -63,6 +62,7 @@ a, h3, h4, h5, p {
 
 .all-books li{
     list-style: none;
+    width: 220px;
 }
 
 .all-books li a{
@@ -74,7 +74,7 @@ a, h3, h4, h5, p {
     gap: 10px;
     padding: 12px;
     border-radius: 5px;
-    max-width: 92%;
+    width: 100%;
     height: 100%;
 }
 
@@ -93,7 +93,7 @@ a, h3, h4, h5, p {
 }
 
 .all-books a img{
-    height: 13em;
+    width: 100%;
     border-radius: 5px;
 }
 
