--- a/views/edit-book.pug
+++ b/views/edit-book.pug
@@ -9,15 +9,15 @@ block contents
             h4 "Books are our stories in a world where everything is forgoten"
             p Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quam nulla cumque hic, dignissimos veniam eos repudiandae temporibus, corrupti, et saepe fuga magni placeat quod nobis velit dicta eaque asperiores?
         
-        form(action="/books/edit" method="POST")
+        form(action="/books/edit" method="POST" enctype="multipart/form-data")
             input(type="hidden" name="_csrf" value=(csrfToken))
-            input(type="text" name="bookId" value=(book._id)).form-id-field
-            input(type="text" placeholder="Book title" name="title" value=(book.name))
-            input(type="text" placeholder="Author name" name="author" value=(book.author))
-            input(type="url" placeholder="Valid Book Image URL" name="image" value=(book.image))
+            input(type="text" name="bookId" value=(book._id) required).form-id-field
+            input(type="text" placeholder="Book title" name="title" value=(book.name) required)
+            input(type="text" placeholder="Author name" name="author" value=(book.author) required)
+            input(type="file" name="image" value=(book.image) required)
             .publication-details
-                input(type="date" placeholder="Publication date" name="pub" value=(book.publishedDate))
-                input(type="text" placeholder="ISBN Number" name="isbn" value=(book.ISBN))
+                input(type="date" placeholder="Publication date" name="pub" value=(book.publishedDate) required)
+                input(type="text" placeholder="ISBN Number" name="isbn" value=(book.ISBN) required)
             .book-size
                 input(type="number" placeholder="Total amount" name="size" value=(book.amountAvailable))
                 input(type="number" placeholder="Shelf Number" name="position" value=(book.shelfNumber))
