--- a/views/orders.pug
+++ b/views/orders.pug
@@ -32,15 +32,18 @@ block contents
                                 td #{order.book.ISBN}
                                 td #{order.book.publishedDate}
                             
-                                td.delete-column
+                                td.order-column
                                     if order.orderId
-                                        form(action="/books/orders/get-booking-invoice" method="POST")
-                                            input(type="hidden" name="_csrf" value=(csrfToken))
-                                            input(type="text" value=(order.orderId) name="orderId").id-element
-                                            input(type="submit" value="Get invoice").submit-btn 
+                                        if !order.orderFileUrl
+                                            form(action="/books/orders/get-booking-invoice" method="POST")
+                                                input(type="hidden" name="_csrf" value=(csrfToken))
+                                                input(type="text" value=(order.orderId) name="orderId").id-element
+                                                input(type="submit" value="Get invoice").submit-btn 
+                                        else
+                                            form
+                                                a(href=(order.orderFileUrl)).submit-btn Invoice link  
                                 td.delete-column 
-                                    if order.orderId
-                                        form(action="/books/orders/delete-order" method="POST")
-                                            input(type="hidden" name="_csrf" value=(csrfToken))
-                                            input(type="text" value=(order.orderId) name="orderId").id-element
-                                            input(type="submit" value="Cancel order").submit-btn 
+                                    form(action="/books/orders/delete-order" method="POST")
+                                        input(type="hidden" name="_csrf" value=(csrfToken))
+                                        input(type="text" value=(order.orderId) name="orderId").id-element
+                                        input(type="submit" value="Cancel order").submit-btn 
